--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Trip_To_JiuJiang</string>
+    <string name="app_name">浔阳游</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hello">123</string>
 </resources>
